--- a/frontend/src/app/sidebar-menu/sidebar-menu.component.html
+++ b/frontend/src/app/sidebar-menu/sidebar-menu.component.html
@@ -26,7 +26,15 @@
                 </div>
             </mat-list-item>
 
-            <mat-list-item routerLink="routes" routerLinkActive="active">
+            <mat-list-item routerLink="users" routerLinkActive="active" *ngIf="user.role == 'Admin'">
+                <mat-icon mat-list-icon>groups</mat-icon>
+                <div fxFlex="10"></div>
+                <div *ngIf="sidenavWidth > 6" class="sidenav-item">
+                    <span>Users Management</span>
+                </div>
+            </mat-list-item>
+
+            <mat-list-item routerLink="routes" routerLinkActive="active" *ngIf="user.role != 'Admin'">
                 <mat-icon mat-list-icon>route</mat-icon>
                 <div fxFlex="10"></div>
                 <div *ngIf="sidenavWidth > 6" class="sidenav-item">
@@ -34,7 +42,7 @@
                 </div>
             </mat-list-item>
 
-            <mat-list-item routerLink="planning" routerLinkActive="active">
+            <mat-list-item routerLink="planning" routerLinkActive="active" *ngIf="user.role != 'Admin'">
                 <mat-icon mat-list-icon>edit_calendar</mat-icon>
                 <div fxFlex="10"></div>
                 <div *ngIf="sidenavWidth> 6" class="sidenav-item">
@@ -43,7 +51,7 @@
             </mat-list-item>
 
 
-            <mat-list-item routerLink="offline" routerLinkActive="active">
+            <mat-list-item routerLink="offline" routerLinkActive="active"  *ngIf="user.role== 'Seller' && user.role== 'Auditor'">
                 <mat-icon mat-list-icon>refresh</mat-icon>
                 <div fxFlex="10"></div>
                 <div *ngIf="sidenavWidth> 6" class="sidenav-item">
