--- a/frontend/src/app/admin/add-user/add-user.component.html
+++ b/frontend/src/app/admin/add-user/add-user.component.html
@@ -13,7 +13,7 @@
                 <label>First Name :</label>
                 <mat-form-field >
                     <!-- <mat-label>Id User</mat-label> -->
-                    <input matInput [(ngModel)]="FirstName" />
+                    <input matInput placeholder="Type the name..." [(ngModel)]="FirstName" />
                 </mat-form-field>
             </div>
             <div class="field">
