--- a/frontend/src/app/admin/users/users.component.html
+++ b/frontend/src/app/admin/users/users.component.html
@@ -77,7 +77,7 @@
             <ng-container *matCellDef="let request" >
               <td mat-cell *ngIf="request.status=='out of work'"><span style="background-color: #AE5827; padding: 3px; color: #fff; border-radius: 3px;">{{request.status}}</span></td>
             
-              <td mat-cell *ngIf="request.status=='active'"><span style="background-color: #27AE61; padding: 3px; color: #fff; border-radius: 3px;">{{request.status}}</span></td>
+              <td mat-cell *ngIf="request.status=='Active'"><span style="background-color: #27AE61; padding: 3px; color: #fff; border-radius: 3px;">{{request.status}}</span></td>
             </ng-container>
           
           </ng-container>
@@ -93,7 +93,7 @@
             </th>
             <td mat-cell *matCellDef="let request">
                 <button mat-icon-button (click)="updateUser(request)" title="Update user"><mat-icon class="valid-icon">edit</mat-icon></button>
-                <button mat-icon-button (click)="deleteUser(request)" title="Delete user" *ngIf="request.status=='active'">
+                <button mat-icon-button (click)="deleteUser(request)" title="Delete user" *ngIf="request.status=='Active'">
                   <mat-icon class="refus-icon" >delete</mat-icon>
                 </button>
                 <button mat-icon-button (click)="restoreUser(request)" title="Bring back this user" *ngIf="request.status=='out of work'">
