--- a/frontend/src/app/admin/update-user/update-user.component.html
+++ b/frontend/src/app/admin/update-user/update-user.component.html
@@ -69,7 +69,7 @@
             </div>
             <div class="btns">
                 <button class="btn-red" mat-button routerLink="/users">Cancel</button>
-                <button class="btn-green" mat-button>Update</button>
+                <button class="btn-green" mat-button (click)="UpdateUser()">Update</button>
             </div>
         </div>
         
