--- a/frontend/src/app/delete-client/delete-client.component.css
+++ b/frontend/src/app/delete-client/delete-client.component.css
@@ -131,3 +131,23 @@
     align-items: center;
     gap: 10px;
 }
+
+
+body {
+    background-color: #F0F0F0;
+}
+#app {
+    text-align: center;
+    color: #2c3e50;
+    margin-top: 60px;
+}
+#video {
+    background-color: #000000;
+}
+#canvas {
+    display: none;
+}
+li {
+    display: inline;
+    padding: 5px;
+}
