finish delete client

--- a/frontend/src/app/delete-client/delete-client.component.html
+++ b/frontend/src/app/delete-client/delete-client.component.html
@@ -89,9 +89,10 @@
                 <button class="btn btn-warning btn-lg" *ngIf="isRecording" (click)="stopRecording()">Stop Recording</button>
             </div>
         </div>
-         
-
         <button mat-button class="btn-yellow" (click)="Send()">Send</button>
+
+        <button mat-button class="btn-yellow" (click)="ReadVideo()">Read</button>
+
         
         
     <!-- </div> 
