--- a/frontend/src/app/admin/delete-requests/delete-requests.component.html
+++ b/frontend/src/app/admin/delete-requests/delete-requests.component.html
@@ -77,6 +77,7 @@
           <tr mat-row *matRowDef="let request; columns: columnsToDisplay"></tr>
       
         </table>
+        <mat-paginator [pageSizeOptions]="[ 5, 10]" showFirstLastButtons></mat-paginator>
       
     </div>
 </div>
