--- a/frontend/src/app/admin/users/users.component.css
+++ b/frontend/src/app/admin/users/users.component.css
@@ -109,6 +109,10 @@
   .header {
     padding: 5px;
   }
+
+  table td{
+    font-size: 12px;
+  }
   
   
   /* ---------------------------------------------------------- */
@@ -141,7 +145,7 @@
     padding-bottom: 0px;
   }
   .actions-column {
-    width: 20%;
+    width: 15%;
     padding-right: 3rem;
     padding-top: 0px;
     padding-bottom: 0px;
@@ -183,4 +187,11 @@
   }
   .restore-icon{
     color: #ac8808;
+  }
+
+  .filter-container{
+    display: flex;
+    flex-flow: row;
+    /* justify-content: space-between; */
+    gap: 40px;
   }
