--- a/frontend/src/app/injection/injection.component.html
+++ b/frontend/src/app/injection/injection.component.html
@@ -1,29 +1,35 @@
+<!-- <link type="text/css" rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" /> -->
 <div class="containe-ids">
     <label class="btn btn-default">
         <input type="file" multiple (change)="selectFiles($event)" />
     </label>
-    <button class="btn btn-success" [disabled]="!selectedFiles" (click)="uploadFiles()">
+    <button class="btn-success" [disabled]="!selectedFiles" (click)="uploadFiles()">
         Upload
     </button>
-    <button class="btn btn-red" [disabled]="!selectedFiles" (click)="runscript()">
+    <button class="btn-red" [disabled]="!selectedFiles" (click)="runscript()">
         Run
     </button>
-    <button class="btn btn-clear" [disabled]="!selectedFiles" (click)="deletefile()">
+    <button class="btn-clear" [disabled]="!selectedFiles" (click)="deletefile()">
         Clear
     </button>
 
     <div *ngFor="let progressInfo of progressInfos" class="mb-2">
         <span>{{ progressInfo.fileName }}</span>
         <div class="progress">
-            <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar"
+            <mat-progress-bar mode="determinate" [value]="progressInfo.value"></mat-progress-bar>
+            <span attr.aria-valuenow="{{ progressInfo.value }}"
+                [ngStyle]="{width: progressInfo.value + '%'}">{{progressInfo.value}}%</span>
+            <!--
+            <div class="progress-bar" role="progressbar"
                 attr.aria-valuenow="{{ progressInfo.value }}" aria-valuemin="0" aria-valuemax="100"
                 [ngStyle]="{ width: progressInfo.value + '%' }">
                 {{ progressInfo.value }}%
-            </div>
+            </div> -->
         </div>
     </div>
 
     <div class="alert alert-light" role="alert">{{ message }}</div>
+    
 </div>
 <div class="containe-ids">
     <div class="card">
