--- a/frontend/src/app/admin/delete-requests/delete-requests.component.html
+++ b/frontend/src/app/admin/delete-requests/delete-requests.component.html
@@ -64,6 +64,17 @@
                 <button mat-icon-button (click)="navigateToMap(request.PDV[0].geometry.geometry.coordinates[1],request.PDV[0].geometry.geometry.coordinates[0])"><mat-icon class="location-icon">location_on</mat-icon></button>
             </td>
           </ng-container>
+          <ng-container matColumnDef="Request_Date">
+            <th class="header Request_Date-column" mat-header-cell *matHeaderCellDef>
+              <span>Request Date</span>
+              <!-- <button mat-button  class="float-right btn-icon">
+                <mat-icon class="sort-icon"></mat-icon>
+              </button> -->
+            </th>
+            <td mat-cell *matCellDef="let request">
+              {{request.created_at | date:'dd/MM/yyyy' }}
+            </td>
+          </ng-container>
       
           <ng-container matColumnDef="Actions">
             <th class="header actions-column" mat-header-cell *matHeaderCellDef>
