--- a/frontend/src/app/sidebar-menu/sidebar-menu.component.html
+++ b/frontend/src/app/sidebar-menu/sidebar-menu.component.html
@@ -51,7 +51,7 @@
             </mat-list-item>
 
 
-            <mat-list-item routerLink="offline" routerLinkActive="active"  *ngIf="user.role== 'Seller' && user.role== 'Auditor'">
+            <mat-list-item routerLink="offline" routerLinkActive="active"  *ngIf="user.role == 'Seller' || user.role == 'Auditor'">
                 <mat-icon mat-list-icon>refresh</mat-icon>
                 <div fxFlex="10"></div>
                 <div *ngIf="sidenavWidth> 6" class="sidenav-item">
