--- a/frontend/src/app/admin/delete-requests/delete-requests.component.css
+++ b/frontend/src/app/admin/delete-requests/delete-requests.component.css
@@ -98,7 +98,7 @@
   /* Column styles */
   /* ---------------------------------------------------------- */
   .id-column {
-    width: 30%;
+    width: 25%;
     padding-right: 3rem;
     padding-top: 0px;
     padding-bottom: 0px;
@@ -110,13 +110,13 @@
     padding-bottom: 0px;
   }
   .type-column {
-    width: 15%;
+    width: 10%;
     padding-right: 3rem;
     padding-top: 0px;
     padding-bottom: 0px;
   }
   .reason-column {
-    width: 10%;
+    width: 15%;
     padding-right: 3rem;
     padding-top: 0px;
     padding-bottom: 0px;
@@ -128,6 +128,12 @@
     padding-bottom: 0px;
   }
   .location-column {
+    width: 5%;
+  }
+  .date-column{
+    width: 10%;
+  }
+  .status-column{
     width: 10%;
   }
   /* ---------------------------------------------------------- */
