--- a/frontend/src/app/admin/delete-requests/delete-requests.component.html
+++ b/frontend/src/app/admin/delete-requests/delete-requests.component.html
@@ -64,9 +64,9 @@
                 <button mat-icon-button (click)="navigateToMap(request.PDV[0].geometry.geometry.coordinates[1],request.PDV[0].geometry.geometry.coordinates[0])"><mat-icon class="location-icon">location_on</mat-icon></button>
             </td>
           </ng-container>
-          <ng-container matColumnDef="Date">
-            <th class="header date-column" mat-header-cell *matHeaderCellDef>
-              <span>Date</span>
+          <ng-container matColumnDef="Request_Date">
+            <th class="header Date-column" mat-header-cell *matHeaderCellDef>
+              <span>Request Date</span>
               <!-- <button mat-button  class="float-right btn-icon">
                 <mat-icon class="sort-icon"></mat-icon>
               </button> -->
