--- a/frontend/src/app/admin/update-user/update-user.component.html
+++ b/frontend/src/app/admin/update-user/update-user.component.html
@@ -1,4 +1,3 @@
-
 <div class="adduser-container">
     <div class="holder">
         <div class="title-holder">
@@ -47,7 +46,6 @@
             </div>
             <div class="field">
                 <label>Password :</label>
-               
                     <mat-form-field >
                         <mat-label>Id User</mat-label> 
                         <ng-template  [ngIf]="hidpass" [ngIfElse]="showPass"> 
@@ -59,13 +57,12 @@
                         </ng-template>
                 </mat-form-field>                
                 
-               
                 <button mat-button class="gen-btn" (click)="GeneratePassword()">Generate Password</button>
             </div>  
             <div class="field"> 
                  <label>Role :</label>
                 <mat-form-field>
-                    <mat-select  panelClass="selectPanel2"   (selectionChange)="onChange()" [(value)]="userInfo.role" disabled>
+                    <mat-select  panelClass="selectPanel2"   (selectionChange)="onChange()" [(value)]="userInfo.role" >
                         
                         <div *ngFor="let rol of Roles" >
                             <mat-option  value="{{rol}}">{{rol}}</mat-option>
