--- a/frontend/src/app/delete-client/delete-client.component.html
+++ b/frontend/src/app/delete-client/delete-client.component.html
@@ -9,6 +9,7 @@
     <div>
         <pre>pos collectés: {{list.length}}</pre>
         <pre>Accuracy: {{acc}}</pre>
+        <pre>Distance according client : {{getDistance()}}</pre>
     </div>
 
     <div ng-app ng-controller="ApplicationController" class="progress-cantainer">
@@ -21,11 +22,14 @@
     </div>
 
     <div class="action-btns">
-        <button mat-button class="btn-yellow">Recalculate my position</button>
+        <ng-template  #showBtn> 
+            <button mat-button class="btn-yellow">Recalculate my position</button>
+        </ng-template>
         <button mat-button class="btn-yellow" (click)="showcheck()"
             [disabled]="(percentage!=100) ||  !Status">Next</button>
     </div>
-
+    
+    <ng-template  [ngIf]="!ValidatePosition()" [ngIfElse]="showBtn"> 
     <div class="container" *ngIf="hide">
         <div class="checkcodes-fields">
 
@@ -93,7 +97,8 @@
 
         <button mat-button class="btn-yellow" (click)="ReadVideo()">Read</button>
 
-        
+       </div>
+    </ng-template> 
         
     <!-- </div> 
     <label class="input-label">PDV location video2 : </label>
