--- a/frontend/src/app/clients/clients.component.html
+++ b/frontend/src/app/clients/clients.component.html
@@ -77,7 +77,8 @@
             <div class="field">
                 <mat-form-field>
                     <mat-select placeholder="Delete" panelClass="selectPanel2" [(ngModel)]="deleteStatus">
-                        <mat-option value="yellow">Deleted</mat-option>
+                        <mat-option value="">All</mat-option>
+                        <mat-option value="deleted">Deleted</mat-option>
                     </mat-select>
                 </mat-form-field>
             </div>
