--- a/frontend/src/app/admin/add-user/add-user.component.html
+++ b/frontend/src/app/admin/add-user/add-user.component.html
@@ -1,13 +1,13 @@
 <div class="adduser-container">
     <div class="holder">
-        <div class="title-holder">
+        <!-- <div class="title-holder">
           <h1 class="title">Add New User</h1>
-        </div>
+        </div> -->
         <div class="add-form">
-            <div class="field">
-                <label>Id User :</label>
+            <!-- <div class="field"> -->
+                <!-- <label>Id User :</label>
                 <button mat-button disabled class="matricule">{{UserID}}</button>
-            </div>
+            </div> -->
             <div class="field">
                 <label>First Name :</label>
                 <mat-form-field >
@@ -52,27 +52,41 @@
                 </mat-form-field>
                 <button mat-button class="gen-btn" (click)="GeneratePassword()">Generate Password</button>
             </div>
+
+
             <div class="field">
                 <label>Role :</label>
-                <mat-form-field>
-                    <mat-select placeholder="select" panelClass="selectPanel2"   (selectionChange)="onChange()" [(value)]="role">
+                <mat-form-field >
+                    <mat-select placeholder="select"  panelClass="selectPanel2"  (selectionChange)="onChange()" [(value)]="role">
                         
                         <div *ngFor="let rol of Roles">
                             <mat-option value="{{rol}}">{{rol}}</mat-option>
                             </div>
                     </mat-select>
                 </mat-form-field>
+                                
+                <label>Role Selected:</label>
+                <mat-form-field >
+                    <mat-select placeholder="select"  panelClass="selectPanel2"   >
+                        
+                        <div *ngFor="let rol of RoleSelected">
+                            <mat-option  >{{rol}} <button class="btn-red" mat-button (click)="RemoveRole(rol)" >x</button></mat-option>
+                            </div>
+                    </mat-select>
+                </mat-form-field>
             </div>
+
             <div class="field" *ngIf="RoleActive()">
                 <label>Sector :</label>
                 <mat-form-field >
-                    <mat-select placeholder="select" multiple  panelClass="selectPanel2" value="SelectedSector" [(ngModel)]="SelectedSector">
+                    <mat-select placeholder="select" multiple panelClass="selectPanel2" (selectionChange)="onChange()" value="SelectedSector" [(ngModel)]="SelectedSector">
                         <div *ngFor="let sector of Sectors">
                             <mat-option value="{{sector.id}}">{{sector.detail}}</mat-option>
                             </div>
                     </mat-select>
                 </mat-form-field>
             </div>
+
             <div class="btns">
                 <button class="btn-red" mat-button routerLink="/users" >Cancel</button>
                 <button class="btn-green" mat-button (click)="SendUser()" >Add</button>
